<resources>
    <string name="app_name">ticTacToe</string>
    <string name="homeTitle">Tic Tac Toe</string>
    <string name="playButton">Play</string>
    <string name="playerSetup">Enter your name</string>
    <string name="label1">Player1</string>
    <string name="label2">Player2</string>
    <string name="submitButton">Submit Names</string>
    <string name="NameHint">Enter Your Name</string>
    <string name="playAgain">Play Again</string>
    <string name="homeButton">Home</string>
</resources>